[package]
name = "asar-rust-bindings"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Rust bindings for Asar (https://github.com/RPGHacker/asar)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asar-rust-bindings-proc-macros = "0.1.0"
parking_lot = "0.12.3"

[build-dependencies]
bindgen = "0.69.4"
cmake = "0.1.50"
